# AlphaScope

./: .dockerignore  .env.example  .gitattributes  .gitignore  .mailmap  AI-Finance-Setup.bat  AUDIT-2026-07-01.md  AlphaScope-Setup.bat  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  FRONTEND_ADAPTATION_REPORT.md  FRONTEND_REPAIR_AUDIT.md  HANDOFF.md  LICENSE  Makefile  README.md  RELEASE-NOTES-v0.90.md  RELEASE-NOTES-v1.0.1.md  RELEASE-NOTES-v1.0.md  RELEASE-NOTES-v1.4.1.md  RELEASE-NOTES-v1.4.2.md  RELEASE-NOTES-v1.5.0.md  RELEASE-NOTES-v1.6.0.md  RELEASE-NOTES-v1.7.0.md  RELEASE-NOTES-v1.7.1.md  RELEASE-NOTES-v1.7.2.md  RELEASE-NOTES-v1.7.3.md  RELEASE-NOTES-v1.7.4.md  RELEASE-NOTES-v1.8.0.md  RELEASE-NOTES-v1.8.1.md  RELEASE-NOTES-v1.9.22.md  RELEASE-NOTES-v1.9.24.md  RELEASE-NOTES-v1.9.25.md  RELEASE-NOTES-v1.9.26.md  RELEASE-NOTES-v1.9.28.md  RELEASE-NOTES-v1.9.29.md  RELEASE-NOTES-v1.9.39.md  SECURITY.md  ai_finance.spec  (+16 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml  windows-installer.yml
apps/web/: .dockerignore  .env.example  Dockerfile  README.md  eslint.config.js  index.html  metadata.json  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
backend/: __init__.py  agent_memory.py  agent_modes.py  agent_store.py  ai_chat.py  ai_evaluation.py  alert_store.py  alternative_factors.py  archive.py  archive_tagger.py  cache.py  concurrency.py  critic.py  data_contract.py  datasource_config.py  diagnostics_store.py  event_impact.py  evidence_store.py  expert_panel.py  file_store.py  fund_flow.py  fundamentals.py  indicators.py  llm_agents.py  mcp_server.py  news_data.py  news_store.py  notifier_store.py  notifiers.py  performance_report.py  pipeline.py  plugin_marketplace.py  portfolio_optimizer.py  price_fetcher.py  price_periods.py  price_quality.py  price_store.py  project_paths.py  provider_timeout.py  research_portfolio_store.py  (+8 more)
backend/agents/: __init__.py  base.py  chairman.py  data_verifier.py  debate.py  demo_fallback.py  financial_agents.py
backend/ai_assistant/: __init__.py  compliance.py  conversation_store.py  orchestrator.py  report_generator.py  report_templates.py
backend/api/: __init__.py  agents.py  alerts.py  backtest_new.py  brief.py  csv_upload.py  datalake.py  datasources.py  diagnostics.py  dragon_tiger.py  evidence.py  experts.py  export.py  factor_registry.py  factors.py  fund_analysis.py  fund_flow.py  fundamentals.py  funds.py  integrations.py  knowledge.py  main.py  monitor.py  news.py  notifiers.py  portfolio_calc.py  portfolio_new.py  prices.py  quality.py  quant.py  report_gen.py  reports.py  research_memory.py  settings.py  stocks.py  tasks.py  technical.py  tickflow.py  valuation.py  vision.py  (+1 more)
backend/archive/: backtester.py
backend/dragon_tiger/: __init__.py  lhb.py  seat_db.py  trap_signals.py
backend/events/: __init__.py  extractor.py
backend/factors/: __init__.py  generator.py
backend/fund_analysis/: __init__.py  dca_simulator.py
backend/funds/: __init__.py  dca.py  metrics.py  portfolio.py  providers.py
backend/ingestion/: __init__.py  jobs.py  scheduled_reports.py  scheduler.py  startup.py
backend/integrations/: __init__.py  base.py  registry.py  schemas.py
backend/models/: __init__.py  model_registry.py  provider_gateway.py
backend/observability/: __init__.py  cost_tracker.py  monitor.py  source_health.py  tracer.py
backend/providers/: __init__.py  akshare_provider.py  baostock_provider.py  base.py  cls_provider.py  cninfo_provider.py  csv_provider.py  demo_provider.py  dragontiger_provider.py  eastmoney_provider.py  finnhub_provider.py  fred_provider.py  google_trends_provider.py  hkex_provider.py  http_json_provider.py  northbound_provider.py  openbb_provider.py  reddit_provider.py  registry.py  sec_provider.py  stocktwits_provider.py  tushare_provider.py  web_search_provider.py  wikipedia_views_provider.py
backend/quality/: __init__.py  anomaly_detector.py  dedup.py  evidence_aggregator.py  evidence_chain.py  report_gate.py  (+1 more)
config/: agent_teams.yaml  data_sources.yaml  experts.yaml  legal_boundaries.yaml  models.yaml  providers.yaml  risk_rules.yaml  safety.yaml  tools.yaml
custom_providers/: README.md  __init__.py  _template.py
docs/: agent-design.md  api.md  architecture.md  contract.md  deployment.md  diagnostics.md  evaluation.md  evidence-chain.md  frontend-redesign-plan.md  fundamentals.md  knowledge-base.md  local-quickstart.md  mcp-server.md  news-events.md  performance.md  price-data.md  security.md  technical-analysis.md  vision-analysis.md
frontend/: dashboard.py
installer/: setup.iss
prompts/: critic.md
reference-frontend/: .env.example  README.md  SOURCE.md  index.html  metadata.json  package-lock.json  package.json  vite.config.ts
reports/: deploy-check-20260516.txt  v0.7-PRD.md  v0.7-class-diagram.mermaid  v0.7-design.md  v0.7-sequence-diagram.mermaid
scripts/: build_seed_db.py  check_env.py  create_provider.py  create_shortcut.ps1  install_deps.ps1  migrate_local.py  pre_commit.py  start_local.bat  start_local.ps1  stop_local.ps1
tests/: conftest.py  test_agent_editor.py  test_agent_modes.py  test_agent_tool_routing.py  test_agents.py  test_ai_evaluation.py  test_alerts_api.py  test_alternative_factors.py  test_analysis_guardrails.py  test_anomaly_detector.py  test_api.py  test_archive_backfill.py  test_archive_summary.py  test_backtest_constraints.py  test_backtest_engine.py  test_brief_api.py  test_check_env.py  test_chip_distribution.py  test_compliance.py  test_compliance_enhanced.py  test_context_builder.py  test_conversation_store.py  test_cost_summary.py  test_critic.py  test_csv_provider.py  test_custom_rule_strategy.py  test_data_contract.py  test_data_verifier.py  test_datalake.py  test_datetime_util.py  test_db.py  test_dca_simulation.py  test_debate.py  test_dedup.py  test_degradation.py  test_demo_fallback.py  test_demo_provider.py  test_diagnostics.py  test_dragon_tiger_api.py  test_dragontiger_provider.py  (+90 more)
(+276 files in other folders)
