[project]
name = "alphascope"
version = "1.9.33"
description = "AlphaScope multi-agent financial analysis workbench"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11,<3.13"
authors = [{ name = "TIANWEN" }]
keywords = ["finance", "ai", "multi-agent", "analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
]

[project.optional-dependencies]
api = ["fastapi>=0.115.0,<1.0", "uvicorn>=0.34.0,<1.0"]
rag = ["chromadb==0.6.3"]
dev = ["pytest==8.4.0", "ruff==0.15.13"]
all = ["alphascope[api,rag,dev]"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = [
    "E402",  # Module level import not at top of file (sys.path manipulation)
    "E501",  # Line too long (Chinese strings)
]

[tool.ruff.lint.per-file-ignores]
"backend/events/__init__.py" = ["F401"]
"backend/factors/__init__.py" = ["F401"]
"backend/providers/__init__.py" = ["F401"]
"backend/schemas/__init__.py" = ["F401"]
"backend/quality/__init__.py" = ["F401"]
"backend/storage/__init__.py" = ["F401"]
"backend/rag/__init__.py" = ["F401"]
"backend/observability/__init__.py" = ["F401"]
"backend/ingestion/__init__.py" = ["F401"]
"tests/probes/*" = ["E", "F", "W"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "network: tests that require live network access; excluded in CI via -m 'not network'",
]
filterwarnings = ["ignore::DeprecationWarning"]
addopts = "-ra --strict-markers --ignore=tests/probes"
