[project]
name = "alphascope"
version = "1.9.44"
description = "AlphaScope multi-agent financial analysis workbench"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11,<3.13"
authors = [{ name = "TIANWEN" }]
keywords = ["finance", "ai", "multi-agent", "analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "streamlit==1.57.0",
    "pandas==3.0.3",
    "numpy==2.4.5",
    "plotly==6.7.0",
    "akshare==1.18.60",
    "requests==2.32.3",
    "curl_cffi==0.13.0",
    "openai==2.3.0",
    "python-dotenv==1.1.0",
    "pyyaml==6.0.2",
    "ruamel.yaml>=0.18,<0.19",
    "pydantic==2.11.3",
    "tenacity==9.1.2",
    "aiohttp==3.12.4",
    "apscheduler==3.11.0",
    "cryptography>=43.0",
    "python-multipart>=0.0.20",
]

[project.scripts]
# MCP server 入口: pip install 后可直接 `alphascope-mcp` 启动(暴露研究工具给 Claude Desktop 等外部 LLM)
alphascope-mcp = "backend.mcp_server:run_server"

[project.optional-dependencies]
api = ["fastapi>=0.115.0,<1.0", "uvicorn>=0.34.0,<1.0", "python-multipart>=0.0.20"]
rag = ["chromadb==0.6.3"]
dev = ["pytest==8.4.0", "ruff==0.15.13"]
quant = [
    "duckdb>=1.0,<2",
    "exchange_calendars>=4.0",
    "pandera>=0.20",
    "quantstats>=0.0.62",
    "backtrader>=1.9.78",
    "lib-pybroker>=1.2.0",
    "skfolio>=0.20",
    "riskfolio>=7.0",
    "pypfopt>=1.5",
    "bt>=1.2",
]
mlops = [
    "mlflow>=2.0",
    "optuna>=3.0",
    "langgraph>=0.2",
    "evidently>=0.4",
    "ragas>=0.1",
    "prefect>=3.0",
    "opentelemetry-sdk>=1.20",
]
all = ["alphascope[api,rag,dev,quant,mlops]"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = [
    "E402",  # Module level import not at top of file (sys.path manipulation)
    "E501",  # Line too long (Chinese strings)
]

[tool.ruff.lint.per-file-ignores]
"backend/events/__init__.py" = ["F401"]
"backend/factors/__init__.py" = ["F401"]
"backend/providers/__init__.py" = ["F401"]
"backend/schemas/__init__.py" = ["F401"]
"backend/quality/__init__.py" = ["F401"]
"backend/storage/__init__.py" = ["F401"]
"backend/rag/__init__.py" = ["F401"]
"backend/observability/__init__.py" = ["F401"]
"backend/ingestion/__init__.py" = ["F401"]
"tests/probes/*" = ["E", "F", "W"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "network: tests that require live network access; excluded in CI via -m 'not network'",
]
filterwarnings = ["ignore::DeprecationWarning"]
addopts = "-ra --strict-markers --ignore=tests/probes"
